# esp32-openclaw-onthego

./: README.md
.github/workflows/: ci.yml  upload_component.yml
components/esp-mochi-node/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp-mochi-node/include/: esp_mochi_node.h
components/esp-mochi-node/private_include/: esp_mochi_node_identity.h  esp_mochi_node_internal.h  esp_mochi_node_persisted_session.h
components/esp-mochi-node/src/: esp_mochi_node.c  esp_mochi_node_connect_source.c  esp_mochi_node_identity.c  esp_mochi_node_protocol.c  (+4 more)
components/esp-mochi-node/test_apps/esp_mochi_node_unity_tests/main/: CMakeLists.txt  test_esp_mochi_node.c
docs/: getting-started.md  troubleshooting.md
examples/: README.md
examples/common/: esp_mochi_node_common_device_node_cmd.c  esp_mochi_node_common_device_node_cmd.h  esp_mochi_node_example_json.c  esp_mochi_node_example_json.h  esp_mochi_node_example_repl.c  esp_mochi_node_example_repl.h  esp_mochi_node_example_repl_cmd.c  esp_mochi_node_example_repl_cmd.h  esp_mochi_node_example_saved_session_reconnect.c  esp_mochi_node_example_saved_session_reconnect.h  esp_mochi_node_wifi.c  esp_mochi_node_wifi.h
examples/esp-box-3-display/: CMakeLists.txt  README.md
examples/esp-box-3-display/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  esp_mochi_node_box_cmd.c  esp_mochi_node_box_cmd.h  esp_mochi_node_box_display.c  esp_mochi_node_box_display.h  esp_mochi_node_box_display_node_cmd.c  esp_mochi_node_box_display_node_cmd.h
examples/esp32-node/: CMakeLists.txt  README.md
(+11 files in other folders)
