idf_component_register(
    SRCS
        "app_main.c"
        "../../common/esp_mochi_node_common_device_node_cmd.c"
        "../../common/esp_mochi_node_example_json.c"
        "../../common/esp_mochi_node_example_repl.c"
        "../../common/esp_mochi_node_example_repl_cmd.c"
        "../../common/esp_mochi_node_example_saved_session_reconnect.c"
        "../../common/esp_mochi_node_wifi.c"
        "esp_mochi_node_box_cmd.c"
        "esp_mochi_node_box_display.c"
        "esp_mochi_node_box_display_node_cmd.c"
    INCLUDE_DIRS
        "."
        "../../common"
    REQUIRES
        esp-mochi-node
        esp-box-3
        esp_app_format
        console
        esp_event
        esp_netif
        esp_timer
        esp_wifi
        espressif__cjson
        mbedtls
        nvs_flash
)
